update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ rvm:
   - 1.9.3
   - 2.1.1
 before_install:
-  - cp config/initializers/secret_token.rb.example config/initializers/secret_token.rb
   - cp config/database.yml.template config/database.yml
   - cp config/settings.yml.template config/settings.yml
+  - cp config/secrets.yml.example config/secrets.yml
 script:
   - bundle exec rake db:setup
   - bundle exec rake
